<resources>
    <string name="app_name">Calendr</string>
    <string name="calendar">Calendar</string>
    <string name="agenda">Agenda</string>
    <string name="today">Today</string>
    <string name="create">Create Event</string>
    <string name="create2">Create</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="date_format">%1$d / %2$d / %3$d</string>
    <string name="time_format">%1$d : %2$d</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="ok">OK</string>
    <string name="no_event">No events</string>
    <string name="show_all">Show all</string>
    <string name="options">Options</string>
    <string name="delete_past">Delete past events</string>
    <string name="export_data">Backup events</string>
    <string name="import_data">Import events</string>
    <string name="one_day">One day</string>
    <string name="reminder">Reminder</string>
    <string name="birthday">Birthday</string>
    <string name="time">Time</string>
    <string name="reminder_text">Reminders set in the app</string>
    <string name="check_year">Take year into consideration</string>
</resources>