<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/black"
        tools:context=".OptionsActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/options"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_marginVertical="50dp"
    />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/delete_past"
            android:id="@+id/btn_delete_past"
            android:backgroundTint="@color/red"
    />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/export_data"
            android:id="@+id/btn_export"
            android:backgroundTint="@color/blue_300"
            android:layout_marginVertical="10dp"
    />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/import_data"
            android:id="@+id/btn_import"
            android:backgroundTint="@color/blue_300"
    />

</LinearLayout>