<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:padding="30dp"
        android:fitsSystemWindows="true">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/event_name"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:hint="@string/name"
            android:autofillHints="@string/name"
            android:inputType="text"
    />
    <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/date"
            android:hint="@string/date1"
            android:inputType="date"
            android:autofillHints="@string/select_date"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            app:layout_constraintTop_toBottomOf="@id/event_name"
            app:layout_constraintStart_toStartOf="parent"
    />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:id="@+id/btn_date"
            app:layout_constraintTop_toBottomOf="@id/event_name"
            app:layout_constraintStart_toEndOf="@id/date"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue_300"
    />
    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/color_selector"
            app:layout_constraintTop_toBottomOf="@id/date"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="10dp">
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/red"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/orange"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/yellow"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/green"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue_300"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/purple"/>
    </RadioGroup>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancel_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue_300"
    />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:id="@+id/ok_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue_300"
    />


</androidx.constraintlayout.widget.ConstraintLayout>