<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <com.applandeo.materialcalendarview.CalendarView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/calendarView"
                app:pagesColor="?android:colorBackground"
                app:headerColor="?android:statusBarColor"
                app:abbreviationsBarColor="?android:statusBarColor"
                app:daysLabelsColor="?android:textColor"
                app:todayLabelColor="?android:colorAccent"
                app:anotherMonthsDaysLabelsColor="@color/grey"
        />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/add_button"
                        android:backgroundTint="?android:statusBarColor"
                        android:text="@string/create2"
                        android:layout_marginHorizontal="4dp"
                />
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btn_more"
                        android:backgroundTint="?android:statusBarColor"
                        android:text="@string/options"
                        android:layout_marginHorizontal="4dp"
                />
        </LinearLayout>

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/loading"
                android:layout_margin="5dp"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/no_event_text"
                android:text="@string/no_event"
                android:visibility="gone"
                android:layout_margin="10dp"
        />
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/event_list"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />
</LinearLayout>
</androidx.core.widget.NestedScrollView>